--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -662,3 +662,85 @@ releases:
         hash: deae241495122d6c9b8602c7a201b604ef604086
       - repo: openstack/openstack-ansible-os_molteniron
         hash: 9c9612a71e0166eef56105e8da34fa3564c7891e
+  - version: 16.0.3
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: cdb446d73a839602d62cf404e0ac121388fcdf0e
+      - repo: openstack/ansible-hardening
+        hash: 84aec070d42c0153275dfa19b4dd2ada34b5839a
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: e5034411a1e4502e633a000cd1bfe02566bf8712
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 4898dafabf8a308e01db913e8332659c62e154aa
+      - repo: openstack/openstack-ansible-galera_client
+        hash: 6ad4ddd4cf9ac00864b03da596786b3954ab4205
+      - repo: openstack/openstack-ansible-galera_server
+        hash: a347e4d1c78e5fcd3f02a6933db6a1b3b589cece
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: f2621b1d41975be8e34724e7db7ec1185b14abe7
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 6be0264a9ab82d87a6429f32545cfb9cd9925222
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 90eb235119d4d9253f70741dc1463477a8837bb4
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 573ad733f9a56b844a9172014d5c008737597e1d
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 72d548135f6c438c7fbb7b28e229cccf3c8488fe
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: cf444425d8a32c1aa5986d419108518453aff934
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: aba43ef45733f34c1de9e6a5792892b8f6c10820
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: 52ad978a58a06b98a116c9f5e38b5da0af775886
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: 4cd19b102c9d86cbf11e7a513ad2a7a0e0c427b7
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: d16e85f3355addf2c77df12a323815c96f25ae97
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 4d3c565d5cb7e047363b77e10b4ce65e82238473
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: b3f53ea50e35e7c8821329ca926ae5413621eb3f
+      - repo: openstack/openstack-ansible-os_designate
+        hash: 56cf5e273fe6241482e840fc75c9d5e9adc228ee
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 61019976f351e5a63f840f93955e309496581ccc
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: b6647a15740d7ca105b8907fef6d4d5eca042f75
+      - repo: openstack/openstack-ansible-os_heat
+        hash: d7632670171b8dbb3dc84e21a04bef2252ca5044
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 2ff8d91aecba626cca843e43ec97f0d644ebed64
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: b1b50a05d808705d5a42a163fd7d195ee19c7b2e
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 57d2552d564754eeae792be6cdf45ff345c6d0b1
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: 9c9612a71e0166eef56105e8da34fa3564c7891e
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: c08679db17da64a9ba48b26b5d50d5010648e5e7
+      - repo: openstack/openstack-ansible-os_nova
+        hash: f237727be026ec37fec3cc7b4ca38a44c880068a
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: deae241495122d6c9b8602c7a201b604ef604086
+      - repo: openstack/openstack-ansible-os_rally
+        hash: e57e9c23f0376a6034e642ba1d97cc301f4da644
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 77d49b653a3cecf7c59f7c6322b8cc925d20709f
+      - repo: openstack/openstack-ansible-os_swift
+        hash: fa4877eb1d45153812dc7fa0215838fbb1e2a8f3
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 05e2bfb63588d8ddd6754c7559284ec8701c77eb
+      - repo: openstack/openstack-ansible-os_trove
+        hash: a34541fca18fb7b48e2a67dfaa8ea8c067e3b1b7
+      - repo: openstack/openstack-ansible-plugins
+        hash: bc8fa680b60b208b98c8be37eaa2a4a1f9c5a829
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: d7ae447f5e11dd68e695c14466f7629653cc3487
+      - repo: openstack/openstack-ansible-repo_build
+        hash: a60c1e41d2fce358eb42fb875cd63bdb564d7801
+      - repo: openstack/openstack-ansible-repo_server
+        hash: f4731abfb090b7e730bd728a3f7751c791ae9f86
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: a78e428e5d550c383bb0d1970c48c634beba4c06
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 0645a9071a2081bc23b9cbe73904385c8b0a09d3
