--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -59,5 +59,9 @@ releases:
       - hash: 61e201bd3cf65e931cc865a1018cf9441e50dab8
         repo: openstack/instack-undercloud
     version: 5.3.3
+  - projects:
+      - hash: 6a46ec6190b1d9c8ad546b72c9f6158ada9be6ef
+        repo: openstack/instack-undercloud
+    version: 5.3.4
 team: tripleo
 type: other
