--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -54,5 +54,9 @@ releases:
       - hash: fb9fa9844ca079d6322eaeb00564dc4bba324c3c
         repo: openstack/tripleo-common
     version: 5.4.5
+  - projects:
+      - hash: d38cc67a9d0efbcae85867aacf9934464acfeb4b
+        repo: openstack/tripleo-common
+    version: 5.4.6
 team: tripleo
 type: library
