--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -63,5 +63,9 @@ releases:
       - hash: 79face75fa31dbecfdca71c6194f0c3935815d3d
         repo: openstack/tripleo-heat-templates
     version: 5.3.4
+  - projects:
+      - hash: c45492f0f0ee0225b20576971d2ddf8be6a17668
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.5
 team: tripleo
 type: other
