TripleO Ocata release
Change-Id: Ib5d1cde5d57a6bebd6b331f67b57f78375f4c161

--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: c610ce13518c5ea6c5978074c7a4a095ce45fdf1
         repo: openstack/puppet-tripleo
     version: 6.5.4
+  - projects:
+      - hash: 42583cb7a33c1db3529db0cd8c0608609c66af7c
+        repo: openstack/puppet-tripleo
+    version: 6.5.5
 team: tripleo
 type: other
