--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -52,5 +52,9 @@ releases:
       - hash: b8680d53b82aed219ec006451add8f112b199451
         repo: openstack/tripleo-heat-templates
     version: 6.2.4
+  - projects:
+      - hash: 06f778296456e0c478ad82fbc763c616776dbe53
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.5
 team: tripleo
 type: other
