--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: a96721ad721e400f474b2032022f930a2d2a6cf4
         repo: openstack/tripleo-common
     version: 6.1.2
+  - projects:
+      - hash: 7b93bc144532c804dfc465d13c3cb97c7d063377
+        repo: openstack/tripleo-common
+    version: 6.1.3
 team: tripleo
 type: other
