TripleO Pike release
Change-Id: I4fce8510edb3f6845a41eea42e03d3fc4c709112

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -42,5 +42,9 @@ releases:
       - hash: a41331486265a6c257e7bef0624c8155b0d40139
         repo: openstack/instack-undercloud
     version: 7.4.3
+  - projects:
+      - hash: de4dd54384a34839d38fc42fd1e35442d34ef810
+        repo: openstack/instack-undercloud
+    version: 7.4.4
 team: tripleo
 type: other
