--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -37,5 +37,9 @@ releases:
       - hash: 7a52d38b80bf635aa93c72d9d52ce826495b0c0b
         repo: openstack/puppet-tripleo
     version: 7.4.3
+  - projects:
+      - hash: f2b1ec7ee9c70563ed682c314910c8fd4c6871aa
+        repo: openstack/puppet-tripleo
+    version: 7.4.4
 team: tripleo
 type: other
