--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -34,6 +34,10 @@ releases:
       - hash: 4bad32cf1de6005917d6e4a62787a24430f4eabc
         repo: openstack/python-tripleoclient
     version: 7.3.3
+  - projects:
+      - hash: 4198fe6dc038011693a21e691351357e3005e476
+        repo: openstack/python-tripleoclient
+    version: 7.3.4
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
