--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: 701daeb20ed47b6812c57d439cf0acc4d4fa62c9
         repo: openstack/tripleo-common
     version: 7.6.3
+  - projects:
+      - hash: 643fa47ab15fd1ae6ecff2495abb2077ce0108fb
+        repo: openstack/tripleo-common
+    version: 7.6.4
 team: tripleo
 type: other
