--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: 06f8f2eb1c60bcbb92989880866f43fb5422d865
         repo: openstack/tripleo-heat-templates
     version: 7.0.3
+  - projects:
+      - hash: 994922a8ba996fe68d047df0e1486fa805dbea31
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.4
 team: tripleo
 type: other
