--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -38,5 +38,9 @@ releases:
       - hash: f4e1c6bbd13af4d70f6dc1d4f6b98c7c5f09993e
         repo: openstack/tripleo-ui
     version: 7.4.3
+  - projects:
+      - hash: 6c8aaef6c6989b7ed6424aa2133bca2721b0f833
+        repo: openstack/tripleo-ui
+    version: 7.4.4
 team: tripleo
 type: other
