Add oslo releases for queens Nov 13, 2017
Change-Id: I355836b0c1b4a74960994df8db7362662b4e443e

--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: e75f4c5ad91962e272d65daa770e00f70f931ecb
         repo: openstack/oslo.context
     version: 2.19.2
+  - projects:
+      - hash: a8d86df94099317f2918bd0cf1f147b822bfc599
+        repo: openstack/oslo.context
+    version: 2.19.3
