--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: 7ade2ed547e690d4737114af467088df17a63ac8
         repo: openstack/oslo.policy
     version: 1.29.0
+  - projects:
+      - hash: 449d41fd96d012ff4bafd06fc11b1b054be99cc5
+        repo: openstack/oslo.policy
+    version: 1.30.0
