--- a/deliverables/queens/oslo.service.yaml
+++ b/deliverables/queens/oslo.service.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 1a973c42cf606f654c5fa39f2d0564887ea970c6
         repo: openstack/oslo.service
     version: 1.26.0
+  - projects:
+      - hash: 704f00f5740111072c68b49a4f7db33585557f95
+        repo: openstack/oslo.service
+    version: 1.27.0
