--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 8161744ca7dc06d5e08b0da1c6861822c0dae467
         repo: openstack/osprofiler
     version: 1.13.0
+  - projects:
+      - hash: ffd8d7d51b0fbfb0abe99671277b06dd888b4903
+        repo: openstack/osprofiler
+    version: 1.14.0
