--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: eec56ea5ceda146b65066f150f413a2f391105d8
         repo: openstack/oslo.log
     version: 3.32.0
+  - projects:
+      - hash: 60564d7d02cc50b05cf2cf2350d72c0769000f43
+        repo: openstack/oslo.log
+    version: 3.33.0
