neutron: release a new 11.0.2 tag for Pike
In current stable Pike branch there are:
 - 8 bugfixes for neutron
 - 2 bugfixes for neutron-lbaas
 - other projects do not contain any bugfixes

Change-Id: I4a59a8467af2ebffe9dc3e8da4c35d522721c014

--- a/deliverables/pike/neutron-lbaas.yaml
+++ b/deliverables/pike/neutron-lbaas.yaml
@@ -3,6 +3,7 @@ launchpad: octavia
 release-model: cycle-with-milestones
 team: octavia
 type: other
+release-type: neutron
 releases:
   - version: 11.0.0.0b1
     projects:
@@ -30,6 +31,10 @@ releases:
         repo: openstack/neutron-lbaas
     version: 11.0.1
     diff-start: 10.0.0
+  - projects:
+      - hash: 81cf553215c158f0fa8238f6cd2ff5655d0e79cd
+        repo: openstack/neutron-lbaas
+    version: 11.0.2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
