Puppet OpenStack queens-1 round 2
The previous attempt at releasing puppet-ceilometer, puppet-glance,
puppet-gnocchi, puppet-magnum, and puppet-swift failed because the
release hashes did not properly include the bindep.txt changes required
to allow the release jobs to build the puppet modules.

Change-Id: I74de6d68075e0cf02adcab260863c1a4e63993a4

--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 9d34005f5d1451dd5be0dcacac23c8f5c3603548
         repo: openstack/puppet-ceilometer
     version: 12.0.0
+  - projects:
+      - hash: 2548dbd378d81932fc0e93407d18eeaebbeeee73
+        repo: openstack/puppet-ceilometer
+    version: 12.1.0
