--- a/deliverables/queens/puppet-glance.yaml
+++ b/deliverables/queens/puppet-glance.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 2ae39c293c19a2dae7d72fabb87b34df7f0aea74
         repo: openstack/puppet-glance
     version: 12.0.0
+  - projects:
+      - hash: fc1a4bc954e03a072ed92c10fb094749f667ff6d
+        repo: openstack/puppet-glance
+    version: 12.1.0
