--- a/deliverables/queens/puppet-magnum.yaml
+++ b/deliverables/queens/puppet-magnum.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 2fea6e849ddc2d4a9801c0501aa33682cef73554
         repo: openstack/puppet-magnum
     version: 12.0.0
+  - projects:
+      - hash: 422f14bb18fa79de8ce1915556eb66e547ff235d
+        repo: openstack/puppet-magnum
+    version: 12.0.1
