--- a/deliverables/queens/puppet-swift.yaml
+++ b/deliverables/queens/puppet-swift.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: efc5e48c3f496a9ca770a8dc5fda151aaea36b42
         repo: openstack/puppet-swift
     version: 12.0.0
+  - projects:
+      - hash: ce7c8d00718cf4150b36ddfe59b245d10be1d69d
+        repo: openstack/puppet-swift
+    version: 12.0.1
