--- a/deliverables/queens/puppet-gnocchi.yaml
+++ b/deliverables/queens/puppet-gnocchi.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: de59fb27029ae51bc22f63f873548080d43f32e0
         repo: openstack/puppet-gnocchi
     version: 12.0.0
+  - projects:
+      - hash: ad9848d20f04e514ac7447a40b5e44d1794acea5
+        repo: openstack/puppet-gnocchi
+    version: 12.0.1
