--- a/deliverables/queens/puppet-magnum.yaml
+++ b/deliverables/queens/puppet-magnum.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 422f14bb18fa79de8ce1915556eb66e547ff235d
         repo: openstack/puppet-magnum
     version: 12.0.1
+  - projects:
+      - hash: 1c2813918b81bf372c065a85ecf27afce0111db8
+        repo: openstack/puppet-magnum
+    version: 12.0.2
