nova: release pike 16.0.3
Several high severity fixes included in this release.

Change-Id: If67e121f7df3b3ae2ee8fd4b490b601efc99e12c

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -46,3 +46,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: cb3abbdb768013e4d7182a91c8a2b26c6d725f35
+  - version: 16.0.3
+    projects:
+      - repo: openstack/nova
+        hash: 3f63d057a64b688b66ff1903c1afc4d97ba6df6d
