nova: release newton 14.0.10
Contains high severity fixes, including a CVE fix.

Change-Id: I7d5f0455a1f56b077eed64bf6e002bc09e4f1910

--- a/deliverables/newton/nova.yaml
+++ b/deliverables/newton/nova.yaml
@@ -97,3 +97,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: ca03fe87371d8c13fc2895f8ff3e7e1ca88cfe79
+  - version: 14.0.10
+    projects:
+      - repo: openstack/nova
+        hash: db6e1dd0a0fde9846114f02811087640fc84f58c
