--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -33,6 +33,10 @@ releases:
       - repo: openstack/horizon
         hash: 2fe66f444a35914009a275f7b8880ad12bc062d6
     version: 12.0.0
+  - version: 12.0.1
+    projects:
+      - repo: openstack/horizon
+        hash: 2c3f58e56a848aeb8c75784e785050fa58248348
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
