--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: 11be2c83145fc88bee657e9b14c9e5eca2410d6f
         repo: openstack/ceilometer
     version: 9.0.1
+  - projects:
+      - hash: 7bee6ae2ef55712ae08cce57faf57061988282b6
+        repo: openstack/ceilometer
+    version: 9.0.2
 branches:
   - location: 9.0.0
     name: stable/pike
