--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -28,3 +28,7 @@ releases:
       - hash: d930f084ab9efe83f5ad870477178df99284fd22
         repo: openstack/ceilometer
     version: 8.1.1
+  - projects:
+      - hash: b3725525a7e2cb8dba696f6335b0f442aff399d4
+        repo: openstack/ceilometer
+    version: 8.1.2
