--- a/deliverables/pike/puppet-horizon.yaml
+++ b/deliverables/pike/puppet-horizon.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 5dd2e6b84b197cac2381e64bf96055be16cb2365
         repo: openstack/puppet-horizon
     version: 11.3.0
+  - projects:
+      - hash: 8716c36109044eab9497156aca5f1b49ec0fada3
+        repo: openstack/puppet-horizon
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
