--- a/deliverables/ocata/puppet-horizon.yaml
+++ b/deliverables/ocata/puppet-horizon.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/puppet-horizon
         hash: d6d13d6766754a6d5b6a7136d3c80087c4bb2222
+  - projects:
+      - hash: 45659830fb3d25efaf83c71f0f96322cc9ee30c5
+        repo: openstack/puppet-horizon
+    version: 10.5.0
