--- a/deliverables/newton/puppet-horizon.yaml
+++ b/deliverables/newton/puppet-horizon.yaml
@@ -1,6 +1,6 @@
 ---
 launchpad: puppet-horizon
-team: Puppet OpenStack
+team: 'Puppet OpenStack'
 type: other
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/puppet-horizon/newton.html
@@ -40,3 +40,7 @@ releases:
     projects:
       - repo: openstack/puppet-horizon
         hash: 938bcf8b01095d3e6d6d42c9198cf3895846d83a
+  - projects:
+      - hash: adddd32a21115144b9be658529dfbf9e5106fac5
+        repo: openstack/puppet-horizon
+    version: 9.7.0
