--- a/deliverables/queens/oslo.rootwrap.yaml
+++ b/deliverables/queens/oslo.rootwrap.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 371811d1409ed07ec4142e3264c7aefb0de27ad9
         repo: openstack/oslo.rootwrap
     version: 5.10.0
+  - projects:
+      - hash: 2e9742f6ade397646c950a5be71ff5e5ce5677e2
+        repo: openstack/oslo.rootwrap
+    version: 5.11.0
