--- a/deliverables/pike/ovsdbapp.yaml
+++ b/deliverables/pike/ovsdbapp.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 71ce425a27413b46a8c6c19de2d5b107a3ed194d
+  - version: 0.4.1
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: 742754bce3c9453f8c7186455a92e4f6d6b18ace
 branches:
   - name: stable/pike
     location: 0.4.0
