--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 558783eba2987a86a1b838a5a89d8957eb950f94
+  - version: 0.8.0
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: 158ae06bce0f56e93677f94c59f81e5e76ee1ccc
