--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -139,3 +139,7 @@ releases:
       - hash: bbe3543f7855d8dab9ac2c445530d7a782bc1e6e
         repo: openstack/reno
     version: 2.5.1
+  - projects:
+      - hash: 9d058ae097e6cfac079fdbabadfc4270c6297e7f
+        repo: openstack/reno
+    version: 2.6.0
