python-saharaclient queens1 release
Change-Id: If0e33044ac85c06fadae0a66ee14f744fbe58715

--- a/deliverables/queens/python-saharaclient.yaml
+++ b/deliverables/queens/python-saharaclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-saharaclient
 release-model: cycle-with-intermediary
 team: sahara
 type: library
+releases:
+  - version: 1.4.0
+    projects:
+      - repo: openstack/python-saharaclient
+        hash: 4728d992080aeee1b015cfa6460571ec8f23e174
