Add oslo releases for queens Nov 20, 2017
Change-Id: Iba1fe660fb4595b135c2f9f6e3ba6588de32e86c

--- a/deliverables/queens/oslo.cache.yaml
+++ b/deliverables/queens/oslo.cache.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 3b8d9c3f6c87d62e5502cf4a9ae89e4067180c1f
         repo: openstack/oslo.cache
     version: 1.26.0
+  - projects:
+      - hash: 39ff06b63176c1de79db6ba6816da7274e154cc5
+        repo: openstack/oslo.cache
+    version: 1.27.0
