--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: fa578a91a134fec9212c742205a7b717d4bacd2f
         repo: openstack/oslo.db
     version: 4.29.0
+  - projects:
+      - hash: c682bfad389e60a8deb175abf9acc0b0f2472dcb
+        repo: openstack/oslo.db
+    version: 4.30.0
