--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 60564d7d02cc50b05cf2cf2350d72c0769000f43
         repo: openstack/oslo.log
     version: 3.33.0
+  - projects:
+      - hash: 1608ad457529ea5b2866de1b6a704872cd8fe078
+        repo: openstack/oslo.log
+    version: 3.34.0
