--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: c2bb75f1e72e2a183400ad1f540ed39fa05bc1b5
         repo: openstack/oslo.messaging
     version: 5.33.1
+  - projects:
+      - hash: 02056bfb12f6fb87a47af177cb9d1c95376cad8c
+        repo: openstack/oslo.messaging
+    version: 5.34.0
