--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: b13187b34ddcc88bee57e4e99b0115cb92540b97
         repo: openstack/castellan
     version: 0.14.1
+  - projects:
+      - hash: ac4fc22681e5859756186ec457529ea7c90c2652
+        repo: openstack/castellan
+    version: 0.15.0
