log output of validate-requests separately
Make the validate job log to a separate file like list-changes does so
we can find the output more easily instead of reading through all of
the zuul output.

Change-Id: Ib5286384aca2b126b9cad93084aaef873883d20a
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ install_command = pip install -U {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
    PYTHONUNBUFFERED=1
+   LOGDIR={envdir}/log
 basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
@@ -23,12 +24,9 @@ deps =
     yamllint==1.4.1
 commands =
     {toxinidir}/tools/run_yamllint.sh
-    validate-request {posargs}
+    {toxinidir}/tools/tox-log-command.sh validate-request {posargs}
 
 [testenv:list-changes]
-setenv =
-    PYTHONUNBUFFERED=1
-    LOGDIR={envdir}/log
 commands =
     {toxinidir}/tools/tox-log-command.sh list-changes {posargs}
 
