--- a/deliverables/_independent/whereto.yaml
+++ b/deliverables/_independent/whereto.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 7e37a20c79ff02615fbee1acc9d449195b36001a
         repo: openstack/whereto
     version: 0.3.0
+  - projects:
+      - hash: 98a91c0a3c986b25472b6d5b09eaebd08fd24782
+        repo: openstack/whereto
+    version: 0.4.0
