--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: c1f1786307d8acfdcae5c6ea3f38c98f627ec9e4
         repo: openstack/os-brick
     version: 2.0.0
+  - projects:
+      - hash: 5fb632f96a16cc42f78b69f451b521304a2dc79a
+        repo: openstack/os-brick
+    version: 2.1.0
