--- a/deliverables/queens/tempest.yaml
+++ b/deliverables/queens/tempest.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/tempest
         hash: fbd26cf12483c9e7bd9587cdc75507a658c48e41
+  - projects:
+      - hash: 9bd78bcd65c46623b6f04ebdc3efe18375fd296f
+        repo: openstack/tempest
+    version: 17.2.0
