TripleO Newton release
Change-Id: I3935869a4bf976c2558da80d433a361c2d4096a0

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -63,5 +63,9 @@ releases:
       - hash: 6a46ec6190b1d9c8ad546b72c9f6158ada9be6ef
         repo: openstack/instack-undercloud
     version: 5.3.4
+  - projects:
+      - hash: 5711e170a7f6177bdf4b74f160228cac57568d5b
+        repo: openstack/instack-undercloud
+    version: 5.3.5
 team: tripleo
 type: other
