--- a/deliverables/newton/os-apply-config.yaml
+++ b/deliverables/newton/os-apply-config.yaml
@@ -23,5 +23,9 @@ releases:
       - hash: 13e5cdc7357f0f175a6ea8157032d9e224c5eec1
         repo: openstack/os-apply-config
     version: 5.1.0
+  - projects:
+      - hash: 5e41fbf013e13777af4be18da3201c24a7b523f5
+        repo: openstack/os-apply-config
+    version: 5.1.1
 team: tripleo
 type: other
