--- a/deliverables/newton/os-collect-config.yaml
+++ b/deliverables/newton/os-collect-config.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 3d7835dc5a63802202209e7f1d096d272608550d
         repo: openstack/os-collect-config
     version: 5.2.0
+  - projects:
+      - hash: bbd95e655f31f313c12684e4f2d2cbae447a0cf7
+        repo: openstack/os-collect-config
+    version: 5.2.1
 team: tripleo
 type: other
