--- a/deliverables/newton/os-net-config.yaml
+++ b/deliverables/newton/os-net-config.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: 60e32735b115b0d6ba7511db8dd3b44e2795a641
         repo: openstack/os-net-config
     version: 5.2.1
+  - projects:
+      - hash: f8ac86541fa1e0f49313b96941436428d386ab2b
+        repo: openstack/os-net-config
+    version: 5.2.2
 team: tripleo
 type: other
