--- a/deliverables/newton/python-tripleoclient.yaml
+++ b/deliverables/newton/python-tripleoclient.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: 19cb0ffb784f4644331caa319652b1822f6e2399
         repo: openstack/python-tripleoclient
     version: 5.4.3
+  - projects:
+      - hash: b302b2731564d9c4d97577ff80489962a5678dae
+        repo: openstack/python-tripleoclient
+    version: 5.4.4
 team: tripleo
 type: library
