--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -58,5 +58,9 @@ releases:
       - hash: d38cc67a9d0efbcae85867aacf9934464acfeb4b
         repo: openstack/tripleo-common
     version: 5.4.6
+  - projects:
+      - hash: 2c83efd59b72c1e87533f1ac1540de63361533f9
+        repo: openstack/tripleo-common
+    version: 5.4.7
 team: tripleo
 type: library
