--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -67,5 +67,9 @@ releases:
       - hash: c45492f0f0ee0225b20576971d2ddf8be6a17668
         repo: openstack/tripleo-heat-templates
     version: 5.3.5
+  - projects:
+      - hash: bd2c6d516f6997aaa7c4ffa8a31a2fe1accac5d7
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.6
 team: tripleo
 type: other
