--- a/deliverables/newton/tripleo-puppet-elements.yaml
+++ b/deliverables/newton/tripleo-puppet-elements.yaml
@@ -55,5 +55,9 @@ releases:
       - hash: 502c4e00e0c8906115349b51b62574489dcca764
         repo: openstack/tripleo-puppet-elements
     version: 5.3.2
+  - projects:
+      - hash: 178a693761b13b4a7a1d81600ddadfcf1640865c
+        repo: openstack/tripleo-puppet-elements
+    version: 5.3.3
 team: tripleo
 type: other
