--- a/deliverables/newton/tripleo-validations.yaml
+++ b/deliverables/newton/tripleo-validations.yaml
@@ -22,5 +22,9 @@ releases:
       - hash: ce16415c8c6a4193d4bc5253be9f36a9126334b8
         repo: openstack/tripleo-validations
     version: 5.1.2
+  - projects:
+      - hash: 51dc921724e08202401ebf31f38763ee684d52f6
+        repo: openstack/tripleo-validations
+    version: 5.1.3
 team: tripleo
 type: library
