--- a/deliverables/newton/tripleo-image-elements.yaml
+++ b/deliverables/newton/tripleo-image-elements.yaml
@@ -51,5 +51,9 @@ releases:
       - hash: 45c06bf83366d01c16f7e5d6389ecd2dbeeeb798
         repo: openstack/tripleo-image-elements
     version: 5.3.2
+  - projects:
+      - hash: 7981c31fc0e9e60901780997160083b80f5d8a34
+        repo: openstack/tripleo-image-elements
+    version: 5.3.3
 team: tripleo
 type: other
