TripleO Ocata release
Change-Id: Ia0a361080b38b068c6b4bfb184d7d263e4e92f85

--- a/deliverables/ocata/os-apply-config.yaml
+++ b/deliverables/ocata/os-apply-config.yaml
@@ -23,5 +23,9 @@ releases:
       - hash: 92f6066d62eef4282f6b1484c7d47e68f21be243
         repo: openstack/os-apply-config
     version: 6.1.1
+  - projects:
+      - hash: 9fa6f2dd4fe9a6f0414741d2e5c60ca7518f73e9
+        repo: openstack/os-apply-config
+    version: 6.1.2
 team: tripleo
 type: other
