--- a/deliverables/ocata/os-collect-config.yaml
+++ b/deliverables/ocata/os-collect-config.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 7154ef294d59825cb6d849c4674efe949055dc6c
         repo: openstack/os-collect-config
     version: 6.1.1
+  - projects:
+      - hash: 88f02627983bdd53b2e9bdfaa7066582dbe12e27
+        repo: openstack/os-collect-config
+    version: 6.1.2
 team: tripleo
 type: other
