--- a/deliverables/ocata/os-net-config.yaml
+++ b/deliverables/ocata/os-net-config.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 914635c2a0e61e8de6a7baf5560522bd654ed301
         repo: openstack/os-net-config
     version: 6.1.1
+  - projects:
+      - hash: 65ed87736599a94bd89fd706a6abc5c1825f421a
+        repo: openstack/os-net-config
+    version: 6.1.2
 team: tripleo
 type: other
