--- a/deliverables/ocata/python-tripleoclient.yaml
+++ b/deliverables/ocata/python-tripleoclient.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 8dbebd4e79c04878abf432d90285d3ba1fcc44e6
         repo: openstack/python-tripleoclient
     version: 6.2.1
+  - projects:
+      - hash: da5483ad5c61d8444a3c2380634c7d765bf66adb
+        repo: openstack/python-tripleoclient
+    version: 6.2.2
 team: tripleo
 type: library
