--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -56,5 +56,9 @@ releases:
       - hash: 06f778296456e0c478ad82fbc763c616776dbe53
         repo: openstack/tripleo-heat-templates
     version: 6.2.5
+  - projects:
+      - hash: aaf911fade780eb96dd02e696188a447c85e22d6
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.6
 team: tripleo
 type: other
