--- a/deliverables/ocata/tripleo-image-elements.yaml
+++ b/deliverables/ocata/tripleo-image-elements.yaml
@@ -36,5 +36,9 @@ releases:
       - hash: 0a5ddb0de5a6f6fa5467806b45f5146c83924f1d
         repo: openstack/tripleo-image-elements
     version: 6.1.1
+  - projects:
+      - hash: 265cd87840e1cc3d5cacf55a8a188fff3dc1d6fd
+        repo: openstack/tripleo-image-elements
+    version: 6.1.2
 team: tripleo
 type: other
