--- a/deliverables/ocata/tripleo-puppet-elements.yaml
+++ b/deliverables/ocata/tripleo-puppet-elements.yaml
@@ -48,5 +48,9 @@ releases:
       - hash: 1eeaf432b7be2571ac53330c45d96f68ffae5a5d
         repo: openstack/tripleo-puppet-elements
     version: 6.2.3
+  - projects:
+      - hash: df92cede000fef273641906746d3e0d289ea3749
+        repo: openstack/tripleo-puppet-elements
+    version: 6.2.4
 team: tripleo
 type: other
