--- a/deliverables/ocata/tripleo-validations.yaml
+++ b/deliverables/ocata/tripleo-validations.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: 0a2641ada05d796aaa98e9246153764e0937a451
         repo: openstack/tripleo-validations
     version: 5.6.1
+  - projects:
+      - hash: 68d112edef1d1c3c3e531bc482e32f62031d7431
+        repo: openstack/tripleo-validations
+    version: 5.6.2
 team: tripleo
 type: other
