--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -36,5 +36,9 @@ releases:
       - hash: b0e0ed7f070d47970f49bcea8b642669fe5c664a
         repo: openstack/instack-undercloud
     version: 6.1.2
+  - projects:
+      - hash: e89ee9c41c1f0a768545cbc09d77f8318e003753
+        repo: openstack/instack-undercloud
+    version: 6.1.3
 team: tripleo
 type: other
