--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: 7b93bc144532c804dfc465d13c3cb97c7d063377
         repo: openstack/tripleo-common
     version: 6.1.3
+  - projects:
+      - hash: 1fa7fb6336f6f197bc2b4d81a70febc426e22692
+        repo: openstack/tripleo-common
+    version: 6.1.4
 team: tripleo
 type: other
